--- a/index.html
+++ b/index.html
@@ -4,111 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resource Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
-        }
-        .container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            margin: auto;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-        input[type="number"] {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        button {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        #result {
-            margin-top: 20px;
-            padding: 10px;
-            border: 1px solid #28a745;
-            background-color: #d4edda;
-            color: #155724;
-            border-radius: 4px;
-            font-weight: bold;
-            display: none; /* Hidden by default */
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Resource Calculation</h1>
+        <h1>Resource Calculator</h1>
         <form id="resourceForm">
-            <label for="blueBoxes">Number of Blue Resource Choice Boxes:</label>
-            <input type="number" id="blueBoxes" name="blueBoxes" min="0" required>
-
-            <label for="purpleBoxes">Number of Purple Resource Choice Boxes:</label>
-            <input type="number" id="purpleBoxes" name="purpleBoxes" min="0" required>
-
-            <label for="goldBoxes">Number of Gold Resource Boxes:</label>
-            <input type="number" id="goldBoxes" name="goldBoxes" min="0" required>
-
-            <label for="woodMillions">Amount of Wood (in millions):</label>
-            <input type="number" id="woodMillions" name="woodMillions" min="0" required>
-
-            <label for="ironMillions">Amount of Iron (in millions):</label>
-            <input type="number" id="ironMillions" name="ironMillions" min="0" required>
-
-            <label for="electricityMillions">Amount of Electricity (in millions):</label>
-            <input type="number" id="electricityMillions" name="electricityMillions" min="0" required>
-
-            <label for="requiredForUpgrade">Amount of Each Resource Required for Upgrade:</label>
-            <input type="number" id="requiredForUpgrade" name="requiredForUpgrade" min="0" required>
-
+            <div class="input-group">
+                <label for="blueBoxes">Number of Blue Resource Choice Boxes:</label>
+                <input type="number" id="blueBoxes" step="1" min="0" required>
+            </div>
+            <div class="input-group">
+                <label for="purpleBoxes">Number of Purple Resource Choice Boxes:</label>
+                <input type="number" id="purpleBoxes" step="1" min="0" required>
+            </div>
+            <div class="input-group">
+                <label for="goldBoxes">Number of Gold Resource Boxes:</label>
+                <input type="number" id="goldBoxes" step="1" min="0" required>
+            </div>
+            <div class="input-group">
+                <label for="wood">Amount of Wood (in millions):</label>
+                <input type="number" id="wood" step="0.1" min="0" required>
+            </div>
+            <div class="input-group">
+                <label for="iron">Amount of Iron (in millions):</label>
+                <input type="number" id="iron" step="0.1" min="0" required>
+            </div>
+            <div class="input-group">
+                <label for="electricity">Amount of Electricity (in millions):</label>
+                <input type="number" id="electricity" step="0.1" min="0" required>
+            </div>
+            <div class="input-group">
+                <label for="upgradeResource">Amount of each Resource Required for Upgrade:</label>
+                <input type="number" id="upgradeResource" step="any" min="0" required>
+            </div>
             <button type="submit">Calculate</button>
         </form>
-        <div id="result"></div>
+
+        <div id="results" class="results-container">
+            <h2>Results:</h2>
+            <p><strong>Box Total:</strong> <span id="boxTotal"></span></p>
+            <p><strong>Resource Total:</strong> <span id="resourceTotal"></span></p>
+            <p><strong>Required Total:</strong> <span id="requiredTotal"></span></p>
+            <p><strong>Remaining Needed:</strong> <span id="remainingNeeded"></span></p>
+        </div>
     </div>
 
-    <script>
-        document.getElementById('resourceForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent default form submission
-
-            // Get input values
-            const blueBoxes = parseFloat(document.getElementById('blueBoxes').value);
-            const purpleBoxes = parseFloat(document.getElementById('purpleBoxes').value);
-            const goldBoxes = parseFloat(document.getElementById('goldBoxes').value);
-            const woodMillions = parseFloat(document.getElementById('woodMillions').value);
-            const ironMillions = parseFloat(document.getElementById('ironMillions').value);
-            const electricityMillions = parseFloat(document.getElementById('electricityMillions').value);
-            const requiredForUpgrade = parseFloat(document.getElementById('requiredForUpgrade').value);
-
-            // Perform calculations
-            const box_total = (blueBoxes * 10000) + (purpleBoxes * 100000) + (goldBoxes * 1000000);
-            const resource_total = woodMillions + ironMillions + electricityMillions; // Already in millions, so no further multiplication needed for millions
-            const required_total = requiredForUpgrade * 3;
-
-            const final_answer = required_total - resource_total - box_total;
-
-            // Display the result
-            const resultDiv = document.getElementById('result');
-            resultDiv.textContent = `The final answer is: ${final_answer.toFixed(2)}`; // .toFixed(2) for better readability
-            resultDiv.style.display = 'block'; // Make the result visible
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
