--- a/index.html
+++ b/index.html
@@ -8,45 +8,45 @@
 </head>
 <body>
     <div class="container">
-        <h1>Resource Calculator</h1>
+        <h1>Resource Upgrade Calculator</h1>
         <form id="resourceForm">
             <div class="input-group">
                 <label for="blueBoxes">Number of Blue Resource Choice Boxes:</label>
-                <input type="number" id="blueBoxes" step="1" min="0" required>
+                <input type="number" id="blueBoxes" min="0" step="1" required>
             </div>
             <div class="input-group">
                 <label for="purpleBoxes">Number of Purple Resource Choice Boxes:</label>
-                <input type="number" id="purpleBoxes" step="1" min="0" required>
+                <input type="number" id="purpleBoxes" min="0" step="1" required>
             </div>
             <div class="input-group">
                 <label for="goldBoxes">Number of Gold Resource Boxes:</label>
-                <input type="number" id="goldBoxes" step="1" min="0" required>
+                <input type="number" id="goldBoxes" min="0" step="1" required>
             </div>
             <div class="input-group">
                 <label for="wood">Amount of Wood (in millions):</label>
-                <input type="number" id="wood" step="0.1" min="0" required>
+                <input type="number" id="wood" min="0" step="0.1" required>
             </div>
             <div class="input-group">
                 <label for="iron">Amount of Iron (in millions):</label>
-                <input type="number" id="iron" step="0.1" min="0" required>
+                <input type="number" id="iron" min="0" step="0.1" required>
             </div>
             <div class="input-group">
                 <label for="electricity">Amount of Electricity (in millions):</label>
-                <input type="number" id="electricity" step="0.1" min="0" required>
+                <input type="number" id="electricity" min="0" step="0.1" required>
             </div>
             <div class="input-group">
-                <label for="upgradeResource">Amount of each Resource Required for Upgrade:</label>
-                <input type="number" id="upgradeResource" step="any" min="0" required>
+                <label for="resourceRequired">Amount of Each Resource Required for Upgrade:</label>
+                <input type="number" id="resourceRequired" min="0" required>
             </div>
             <button type="submit">Calculate</button>
         </form>
 
         <div id="results" class="results-container">
-            <h2>Results:</h2>
-            <p><strong>Box Total:</strong> <span id="boxTotal"></span></p>
-            <p><strong>Resource Total:</strong> <span id="resourceTotal"></span></p>
-            <p><strong>Required Total:</strong> <span id="requiredTotal"></span></p>
-            <p><strong>Remaining Needed:</strong> <span id="remainingNeeded"></span></p>
+            <h2>Calculation Results:</h2>
+            <p><strong>Box Total:</strong> <span id="displayBoxTotal"></span></p>
+            <p><strong>Resource Total:</strong> <span id="displayResourceTotal"></span></p>
+            <p><strong>Required Total:</strong> <span id="displayRequiredTotal"></span></p>
+            <p><strong>Remaining Needed:</strong> <span id="displayRemainingNeeded"></span></p>
         </div>
     </div>
 
