--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
     <div class="container">
         <h1>Resource Upgrade Calculator</h1>
         <form id="resourceForm">
-            <label for="blueBoxes">Number of Blue Resource Choice Boxes:</label>
+            <label for="blueBoxes">Number of Green Resource Choice Boxes:</label>
             <input type="number" id="blueBoxes" name="blueBoxes" step="1" min="0" required>
 
-            <label for="purpleBoxes">Number of Purple Resource Choice Boxes:</label>
+            <label for="purpleBoxes">Number of Blue Resource Choice Boxes:</label>
             <input type="number" id="purpleBoxes" name="purpleBoxes" step="1" min="0" required>
 
-            <label for="goldBoxes">Number of Gold Resource Boxes:</label>
+            <label for="goldBoxes">Number of Purple Resource Boxes:</label>
             <input type="number" id="goldBoxes" name="goldBoxes" step="1" min="0" required>
 
             <label for="woodAmount">Amount of Wood (in millions):</label>
