--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 
-    <script src="https://pvoutput.org/widget/inc.jsp"></script>
-<script src="https://pvoutput.org/widget/graph.jsp?sid=40802"></script>
+<script src="https://pvoutput.org/widget/inc.jsp"></script>
+<script src="https://pvoutput.org/widget/graph.jsp?sid=40802&w=400&h=80&t=1&c=1"></script>
       
 </body>
 </html>
