--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <script src="https://pvoutput.org/widget/inc.jsp"></script>
 <script src="https://pvoutput.org/widget/graph.jsp?sid=40802&w=400&h=80&t=1&c=1"></script>
+
+<script src="https://pvoutput.org/widget/outputs.jsp?sid=40802"></script>
       
 </body>
 </html>
