--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 </head>
 
 <script src="https://pvoutput.org/widget/inc.jsp"></script>
-<script src="https://pvoutput.org/widget/graph.jsp?sid=40802&w=400&h=80&t=1&c=1"></script>
+<script src="https://pvoutput.org/widget/graph.jsp?sid=40802&w=800&h=400&t=1&c=1&d=1&t=1&n=1&e=1&consumption=1"></script>
 
-<script src="https://pvoutput.org/widget/outputs.jsp?sid=40802"></script>
+<script src="https://pvoutput.org/widget/outputs.jsp?sid=40802&consumption=1&W=800&h=400&n=1&d=1&c=1"></script>
       
 </body>
 </html>
