--- a/index.html
+++ b/index.html
@@ -1,97 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
-    <style>
-        :root {
-            --primary-color: #3498db;
-            --background-color: #f0f4f8;
-            --text-color: #333;
-            --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-        }
-
-        body {
-            background-color: var(--background-color);
-            color: var(--text-color);
-            font-family: var(--font-family);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .container {
-            max-width: 600px;
-            padding: 40px;
-            border-radius: 12px;
-            background-color: white;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            font-size: 3rem;
-            color: var(--primary-color);
-            margin-bottom: 0.5rem;
-        }
-
-        p {
-            font-size: 1.25rem;
-            line-height: 1.6;
-            margin-bottom: 2rem;
-            color: #555;
-        }
-
-        .cta-button {
-            display: inline-block;
-            padding: 12px 24px;
-            font-size: 1rem;
-            color: white;
-            background-color: var(--primary-color);
-            border: none;
-            border-radius: 6px;
-            text-decoration: none;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-        }
-
-        .cta-button:hover {
-            background-color: #2980b9;
-            transform: translateY(-2px);
-        }
-
-        .social-links {
-            margin-top: 2rem;
-        }
-
-        .social-links a {
-            color: var(--primary-color);
-            margin: 0 15px;
-            font-size: 1.5rem;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .social-links a:hover {
-            color: #2980b9;
-        }
-    </style>
 </head>
+
 <body>
 
-<div class="container">
-    <h1>We're Launching Soon!</h1>
-    <p>Our new website is under construction, and we're working hard to bring you something amazing. We'll be ready to go live very soon. Stay tuned for updates!</p>
-    <a href="#" class="cta-button">Notify Me When Live</a>
-    <div class="social-links">
-        <a href="https://twitter.com/yourprofile" target="_blank" aria-label="Follow us on Twitter">Twitter</a>
-        <a href="https://instagram.com/yourprofile" target="_blank" aria-label="Follow us on Instagram">Instagram</a>
-        <a href="https://facebook.com/yourprofile" target="_blank" aria-label="Follow us on Facebook">Facebook</a>
-    </div>
-</div>
+<p>Hello World</p>
 
 </body>
+
 </html>
+    
