--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </p>
 
         <div class="links-container">
-            <a href="https://docs.google.com/spreadsheets/d/1BEzHNrMLSIx871a4Kt70mHykAQ4YiOxCZpltKTIME6k/edit?usp=sharing" class="btn">Upcoming Walks</a>
-            <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn">Add a new walk</a>
+            <a href="https://docs.google.com/spreadsheets/d/1BEzHNrMLSIx871a4Kt70mHykAQ4YiOxCZpltKTIME6k/edit?usp=sharing" class="btn" target="view_current">Upcoming Walks</a>
+            <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn" target="add_new">Add new walk</a>
         </div>
     </main>
 
