--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         header {
             text-align: center;
             padding: 40px 0;
-            background-color: #2d5a27;
+            background: #22C1C3;
+            background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
             color: white;
             border-radius: 8px;
             margin-bottom: 30px;
