--- a/index.html
+++ b/index.html
@@ -14,18 +14,27 @@
             padding: 20px;
             background-color: #f4f7f1;
         }
+
+        /* UPDATED HEADER SECTION */
         header {
             text-align: center;
-            padding: 40px 0;
-            background: #22C1C3;
-            background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+            padding: 80px 20px; /* Increased padding for better image visibility */
+            
+            /* Background Image with a dark overlay for text readability */
+            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
+                        url('https://images.unsplash.com/photo-1623351336021-cc5786f36471?auto=format&fit=crop&q=80&w=1200');
+            
+            background-size: cover;
+            background-position: center;
             color: white;
             border-radius: 8px;
             margin-bottom: 30px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5); /* Adds a shadow to text */
         }
+
         h1 {
             margin: 0;
-            font-size: 2.5rem;
+            font-size: 3rem; /* Slightly larger for the hero style */
         }
         .content {
             background: white;
@@ -38,6 +47,7 @@
             display: flex;
             gap: 20px;
             justify-content: center;
+            flex-wrap: wrap;
         }
         .btn {
             display: inline-block;
@@ -47,6 +57,7 @@
             text-decoration: none;
             border-radius: 5px;
             transition: background 0.3s ease;
+            font-weight: bold;
         }
         .btn:hover {
             background: #386133;
@@ -69,7 +80,7 @@
     <main class="content">
         <h2>Welcome to our Group</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Based in Worcestershire, we are a friendly group of walkers who enjoy exploring the stunning trails of the Malvern Hills and the surrounding countryside. Our walks cater to all abilities, from gentle strolls to challenging climbs.
         </p>
 
         <div class="links-container">
