--- a/index.html
+++ b/index.html
@@ -4,69 +4,143 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Powick Ramblers | Walking Together</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend:wght@500;800&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f4f7f1;
+        :root {
+            --primary: #2d5a27;
+            --primary-hover: #1e3d1a;
+            --accent: #f4f7f1;
+            --text-dark: #1a1a1a;
+            --text-light: #666;
+            --white: #ffffff;
+            --shadow: 0 10px 30px rgba(0,0,0,0.08);
         }
 
-        /* UPDATED HEADER SECTION */
+        * {
+            box-sizing: border-box;
+            transition: all 0.3s ease;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            line-height: 1.7;
+            color: var(--text-dark);
+            margin: 0;
+            padding: 0;
+            background-color: var(--white);
+        }
+
+        /* Hero Header */
         header {
             text-align: center;
-            padding: 80px 20px; /* Increased padding for better image visibility */
-            
-            /* Background Image with a dark overlay for text readability */
-            background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
+            padding: 140px 20px;
+            /* High-quality Malvern Hills style background */
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), 
                         url('https://images.unsplash.com/photo-1623351336021-cc5786f36471?auto=format&fit=crop&q=80&w=1200');
-            
             background-size: cover;
             background-position: center;
+            background-attachment: fixed; /* Parallax effect */
             color: white;
-            border-radius: 8px;
-            margin-bottom: 30px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5); /* Adds a shadow to text */
+            clip-path: ellipse(150% 100% at 50% 0%); /* Modern curved bottom */
         }
 
         h1 {
+            font-family: 'Lexend', sans-serif;
             margin: 0;
-            font-size: 3rem; /* Slightly larger for the hero style */
+            font-size: 4rem;
+            letter-spacing: -2px;
+            font-weight: 800;
         }
+
+        header p {
+            font-size: 1.2rem;
+            opacity: 0.9;
+            font-weight: 400;
+            margin-top: 10px;
+        }
+
+        /* Content Area */
+        .container {
+            max-width: 900px;
+            margin: -60px auto 40px; /* Overlaps the header slightly */
+            padding: 0 20px;
+            position: relative;
+            z-index: 10;
+        }
+
         .content {
-            background: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            background: var(--white);
+            padding: 50px;
+            border-radius: 20px;
+            box-shadow: var(--shadow);
         }
+
+        h2 {
+            font-family: 'Lexend', sans-serif;
+            font-size: 2rem;
+            color: var(--primary);
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 1.1rem;
+            color: var(--text-light);
+            margin-bottom: 25px;
+        }
+
+        /* Modern Buttons */
         .links-container {
-            margin-top: 30px;
             display: flex;
-            gap: 20px;
-            justify-content: center;
+            gap: 15px;
+            justify-content: flex-start;
             flex-wrap: wrap;
+            margin-top: 40px;
         }
+
         .btn {
             display: inline-block;
-            background: #4a7c44;
+            background: var(--primary);
             color: white;
-            padding: 12px 24px;
+            padding: 16px 32px;
             text-decoration: none;
-            border-radius: 5px;
-            transition: background 0.3s ease;
-            font-weight: bold;
+            border-radius: 12px;
+            font-weight: 700;
+            font-size: 1rem;
+            box-shadow: 0 4px 14px rgba(45, 90, 39, 0.3);
         }
+
         .btn:hover {
-            background: #386133;
+            background: var(--primary-hover);
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(45, 90, 39, 0.4);
         }
+
+        .btn-secondary {
+            background: var(--accent);
+            color: var(--primary);
+            box-shadow: none;
+        }
+
+        .btn-secondary:hover {
+            background: #e2e8dc;
+            transform: translateY(-3px);
+            box-shadow: none;
+        }
+
         footer {
             text-align: center;
-            margin-top: 40px;
+            padding: 60px 20px;
             font-size: 0.9rem;
-            color: #666;
+            color: var(--text-light);
+            border-top: 1px solid #eee;
+        }
+
+        /* Responsive Tweaks */
+        @media (max-width: 600px) {
+            h1 { font-size: 2.5rem; }
+            .content { padding: 30px; }
+            .links-container { justify-content: center; }
+            .btn { width: 100%; text-align: center; }
         }
     </style>
 </head>
@@ -77,20 +151,22 @@
         <p>Exploring the Malvern Hills and beyond</p>
     </header>
 
-    <main class="content">
-        <h2>Welcome to our Group</h2>
-        <p>
-            Based in Worcestershire, we are a friendly group of walkers who enjoy exploring the stunning trails of the Malvern Hills and the surrounding countryside. Our walks cater to all abilities, from gentle strolls to challenging climbs.
-        </p>
+    <div class="container">
+        <main class="content">
+            <h2>Welcome to our Group</h2>
+            <p>
+                Based in Worcestershire, we are a friendly group of walkers who enjoy exploring the stunning trails of the Malvern Hills and the surrounding countryside[cite: 15]. Our walks cater to all abilities, from gentle strolls to challenging climbs[cite: 16].
+            </p>
 
-        <div class="links-container">
-            <a href="https://docs.google.com/spreadsheets/d/1BEzHNrMLSIx871a4Kt70mHykAQ4YiOxCZpltKTIME6k/edit?usp=sharing" class="btn" target="view_current">Upcoming Walks</a>
-            <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn" target="add_new">Add new walk</a>
-        </div>
-    </main>
+            <div class="links-container">
+                <a href="https://docs.google.com/spreadsheets/d/1BEzHNrMLSIx871a4Kt70mHykAQ4YiOxCZpltKTIME6k/edit?usp=sharing" class="btn" target="view_current">Upcoming Walks</a>
+                <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn btn-secondary" target="add_new">Add new walk</a>
+            </div>
+        </main>
+    </div>
 
     <footer>
-        <p>&copy; 2026 Powick Ramblers. All walkers welcome.</p>
+        <p>&copy; 2026 Powick Ramblers. All walkers welcome[cite: 17].</p>
     </footer>
 
 </body>
