--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <main class="content">
             <h2>Welcome to our Group</h2>
             <p>
-                Based in Worcestershire, we are a friendly group of walkers who enjoy exploring the stunning trails of the Malvern Hills and the surrounding countryside[cite: 15]. Our walks cater to all abilities, from gentle strolls to challenging climbs[cite: 16].
+                Based in Worcestershire, we are a friendly group of walkers who enjoy exploring the stunning trails of the Malvern Hills and the surrounding countryside. Our walks cater to all abilities, from gentle strolls to challenging climbs.
             </p>
 
             <div class="links-container">
