--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
             <div class="links-container">
                 <a href="https://docs.google.com/spreadsheets/d/1BEzHNrMLSIx871a4Kt70mHykAQ4YiOxCZpltKTIME6k/edit?usp=sharing" class="btn" target="view_current">Upcoming Walks</a>
-                <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn btn-secondary" target="add_new">Add new walk</a>
+                <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn btn-secondary" target="add_new">Add a new walk</a>
             </div>
         </main>
     </div>
