--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 Powick Ramblers. All walkers welcome[cite: 17].</p>
+        <p>&copy; 2026 Powick Ramblers. All walkers welcome.</p>
     </footer>
 
 </body>
