--- a/index.html
+++ b/index.html
@@ -126,26 +126,26 @@
 <body>
 
     <header>
-        <h1>Powick Ramblers</h1>
-        <p>Exploring the Malvern Hills and beyond</p>
+        <h1>Powick Ramblers</h1> [cite: 1]
+        <p>Exploring the Malvern Hills and beyond</p> [cite: 1, 15]
     </header>
 
     <div class="container">
-        <main class="content">
-            <h2>Welcome to our Group</h2>
+        <main class="content"> [cite: 9]
+            <h2>Welcome to our Group</h2> [cite: 1]
             <p>
-                Based in Worcestershire, we are a friendly group of walkers who enjoy exploring the stunning trails of the Malvern Hills and the surrounding countryside. Our walks cater to all abilities, from gentle strolls to challenging climbs.
+                Based in Worcestershire, we are a friendly group of walkers who enjoy exploring the stunning trails of the Malvern Hills and the surrounding countryside. [cite: 15] Our walks cater to all abilities, from gentle strolls to challenging climbs. [cite: 15]
             </p>
 
             <div class="links-container"> [cite: 10]
-                <a href="https://docs.google.com/spreadsheets/d/1BEzHNrMLSIx871a4Kt70mHykAQ4YiOxCZpltKTIME6k/edit?usp=sharing" class="btn" target="view_current">Upcoming Walks</a>
-                <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn btn-secondary" target="add_new">Add a new walk</a>
+                <a href="https://docs.google.com/spreadsheets/d/1BEzHNrMLSIx871a4Kt70mHykAQ4YiOxCZpltKTIME6k/edit?usp=sharing" class="btn" target="view_current">Upcoming Walks</a> [cite: 16]
+                <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn btn-secondary" target="add_new">Add new walk</a> [cite: 16]
             </div>
         </main>
     </div>
 
     <footer>
-        <p>&copy; 2026 Powick Ramblers. All walkers welcome.</p>
+        <p>&copy; 2026 Powick Ramblers. All walkers welcome.</p> [cite: 17]
     </footer>
 
 </body>
