--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
 
     <header>
         <h1>Powick Ramblers</h1>
-        <p>Exploring the Malvern Hills and beyond</p>
+        <p>Exploring the Worcestershire countryside</p>
     </header>
 
     <div class="container">
         <main class="content">
-            <h2>Welcome to our Group</h2>
+            <h2>Welcome to our group</h2>
             <p>
-                Based in Worcestershire, we are a friendly group of walkers who enjoy exploring the stunning trails of the Malvern Hills and the surrounding countryside. Our walks cater to all abilities, from gentle strolls to challenging climbs.
+                Based in Worcestershire, we are a friendly group of walkers who enjoy exploring the Worcestershire countryside. Our walks cater to all abilities, from gentle strolls to longer hikes.
             </p>
 
             <div class="links-container">
                 <a href="https://docs.google.com/spreadsheets/d/1BEzHNrMLSIx871a4Kt70mHykAQ4YiOxCZpltKTIME6k/edit?usp=sharing" class="btn" target="_blank">Upcoming Walks</a>
-                <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn btn-secondary" target="_blank">Add new walk</a>
+                <a href="https://forms.gle/9hT7F9uQtR1PFgSa8" class="btn btn-secondary" target="_blank">Add a new walk</a>
             </div>
         </main>
     </div>
